--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   pull_to_refresh: ^2.0.0
   add_2_calendar: ^2.2.5
   onesignal_flutter: ^5.0.3
+  firebase_dynamic_links: ^5.4.9
 
 dev_dependencies:
   flutter_test:
