--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   cached_network_image: ^3.3.0
   redacted: ^1.0.11
-  webview_flutter: ^4.4.2
+  webview_flutter: ^4.5.0
   flutter_widget_from_html: ^0.14.6
 #  firebase_core: ^2.24.0
   firebase_database: ^10.3.6
@@ -66,9 +66,10 @@ dependencies:
   firebase_core: ^2.24.0
   cloud_firestore: ^4.13.3
   pull_to_refresh: ^2.0.0
-  add_2_calendar: ^2.2.5
+  add_2_calendar: ^2.2.4
   onesignal_flutter: ^5.0.3
   firebase_dynamic_links: ^5.4.9
+  share_plus: ^7.2.2
 
 dev_dependencies:
   flutter_test:
