--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,7 @@ dependencies:
   firebase_core: ^2.24.0
   cloud_firestore: ^4.13.3
   pull_to_refresh: ^2.0.0
-  add_2_calendar: ^2.2.5
+  add_2_calendar: 2.2.4
   onesignal_flutter: ^5.0.3
   firebase_dynamic_links: ^5.4.12
   share_plus: ^7.2.2
