--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   open_file: ^3.3.2
   flutter_pdfview: ^1.3.2
   photo_view: ^0.14.0
-  http: ^1.1.0
+  http: ^1.2.0
   flutter_calendar_carousel: ^2.4.2
   intl_phone_field:
     path: intl_phone_field-3.2.0
@@ -76,11 +76,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  build_runner: ^2.1.10
+  build_runner: ^2.4.8
   json_serializable: ^6.6.1
   flutter_lints: ^2.0.0
   flutter_launcher_icons: "^0.13.1"
   rename: ^3.0.1
+  mockito: ^5.4.4
 
 flutter_launcher_icons:
     android: "launcher_icon"
