--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ name: pt_platform
 description: A new Flutter project.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.3.5+18
+version: 1.3.6+19
 
 environment:
   sdk: ">=3.1.2 <4.0.0"
@@ -47,6 +47,7 @@ dependencies:
   html: ^0.15.4
   http: ^1.2.0
   image_picker: ^1.0.7
+  image_gallery_saver: ^2.0.3
   in_app_purchase: ^3.1.13
   internet_connection_checker: ^1.0.0+1
   intl: ^0.18.0
